--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,9 @@
 .margintopo{
   margin-top: 3px;
 }
+.solveissue{
+  max-width: 30vw;
+}
 @media (max-width: 700px) {
   .fixedtio {
     position: fixed;
@@ -63,6 +66,7 @@
     left: 0;
     width: 100vw;
     position: relative !important;
+    max-width: 100vw;
   }
   .objectcovernow{
     object-fit: cover;
